Fixes player display on mobile

--- a/css/global.scss
+++ b/css/global.scss
@@ -3761,6 +3761,7 @@ section#block-islandora-solr-advanced {
       width: 100%;
       .vjs-control-bar {
       padding: 0px 13px;
+      display: flex !important;
       }
       }
       div#islandora-pdfjs {
